# SuperAgent-ICECODE

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  debug.sh  docker-compose.yml  factorial.py  icecode  install.sh  launch.sh  package.json  pnpm-lock.yaml  pyproject.toml  research_test_input.md  start.sh  stop.sh  test_factorial.py  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  icecode-ci.yml
.turbo/cache/: 2ac0296b5521aa57-manifest.json  2ac0296b5521aa57-meta.json  2ac0296b5521aa57.tar.zst  31a172f0f5f24cb3-manifest.json  31a172f0f5f24cb3-meta.json  31a172f0f5f24cb3.tar.zst  4d72520d0228e5a8-manifest.json  4d72520d0228e5a8-meta.json  4d72520d0228e5a8.tar.zst  91453aab99c1312c-manifest.json  91453aab99c1312c-meta.json  91453aab99c1312c.tar.zst  9c6822438fe73e1a-manifest.json  9c6822438fe73e1a-meta.json  9c6822438fe73e1a.tar.zst  c256d1eeb2d89d40-manifest.json  c256d1eeb2d89d40-meta.json  c256d1eeb2d89d40.tar.zst  d470922fa325469c-manifest.json  d470922fa325469c-meta.json  d470922fa325469c.tar.zst  e2b5ee68d3187402-manifest.json  e2b5ee68d3187402-meta.json  e2b5ee68d3187402.tar.zst
docs/: getting-started.md
memory/: project_icecode.md
scripts/: make_demo_gif.py  setup.sh  start-desktop.sh  start-tui.sh  start.sh
tests/: conftest.py
tests/integration/: test_api.py  test_e2e.py  test_metrics.py  test_real_llm.py  test_routes.py
tests/unit/: test_agent_core.py  test_database.py  test_engine_multimodal.py  test_engine_sanitize.py  test_engine_tool_exec.py  test_engine_tool_guard.py  test_knowledge.py  test_routes_agents.py  test_routes_batch.py  test_routes_benchmark.py  test_routes_browser.py  test_routes_cache.py  test_routes_channels.py  test_routes_chat.py  test_routes_cron.py  test_routes_diagnostics.py  test_routes_dreams.py  test_routes_files.py  test_routes_gateway.py  test_routes_goals.py  test_routes_kanban.py  test_routes_knowledge.py  test_routes_local_models.py  test_routes_marketplace.py  test_routes_mcp.py  test_routes_mixture.py  test_routes_models.py  test_routes_opencode_compat.py  (+10 more)
