[project]
name = "icecode"
version = "1.0.0"
description = "ICECODE Super-Agent Network — Python core (agent engine, tools, gateway, memory)"
requires-python = ">=3.11"
license = { text = "ICECODE-NC-1.0" }
dependencies = [
    # AI providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "boto3>=1.35.0",
    # FastAPI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "websockets>=13.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "click>=8.1.0",
    "pyyaml>=6.0.2",
    "tomli>=2.0.0",
    "orjson>=3.10.0",
    "anyio>=4.6.0",
    "filelock>=3.16.0",
    "apscheduler>=3.10.0",
    # Tools
    "psutil>=6.1.0",
    "gitpython>=3.1.0",
    "pathspec>=0.12.0",
    # Voice
    "openai-whisper>=20231117",
    # MCP
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
voice = [
    "pyaudio>=0.2.14",
    "pyttsx3>=2.90",
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1.0",
]
vision = [
    "pillow>=11.0.0",
    "opencv-python>=4.10.0",
]
rl = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "torch>=2.4.0",
]

[project.scripts]
icecode = "icecode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/icecode"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
